# trendarc

./: CLASSIFICATION_IMPLEMENTATION.md  Cargo.toml  LICENSE  README.md
config/: classification.json
src/: cli.rs  main.rs
src/application/: mod.rs  orchestration.rs
src/application/use_cases/: aggregate_news.rs  fetch_hot_news.rs  mod.rs
src/domain/: mod.rs
src/domain/config/: classification_config.rs  mod.rs
src/domain/entities/: mod.rs  news_item.rs
src/domain/fetchers/: mod.rs  source_factory.rs
src/domain/repositories/: news_repository.rs
src/domain/services/: discord_service.rs  mod.rs  news_classification_service.rs  news_deduplication_service.rs  news_filter_service.rs
src/domain/strategies/: classification_strategy.rs  keyword_based_strategy.rs  mod.rs  source_based_strategy.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/migrations/: 001_initial.sql
src/infrastructure/discord/: mod.rs
src/infrastructure/inference/: mod.rs  openai_inference_service.rs
src/infrastructure/news_sources/: hacker_news_source.rs
src/infrastructure/repositories/: sqlite_news_repository.rs
