[package]
name = "trendarc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# URL 解析
url = "2.5"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# 环境变量
dotenv = "0.15"

# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]

wiremock = "0.5"